fix insert image bug and remove the multipart image add and change it with image url